--- a/backend/src/Togo.Api/appsettings.json
+++ b/backend/src/Togo.Api/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=3306;Database=togo;User=togo_app;Password=Togo@12345;SslMode=None;"
-    "DefaultConnection": "Data Source=togo.db"
+    "Default": "Server=localhost;Port=3306;Database=togo;User=togo_app;Password=Togo@12345;SslMode=Preferred;"
   },
   "Logging": {
     "LogLevel": {
