--- a/backend/src/Togo.Api/Togo.Api.csproj
+++ b/backend/src/Togo.Api/Togo.Api.csproj
@@ -5,6 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\\Togo.Application\\Togo.Application.csproj" />
     <ProjectReference Include="..\\Togo.Infrastructure\\Togo.Infrastructure.csproj" />
   </ItemGroup>
